# db_projekt

./: .gitignore  Makefile  README.md
data/: bahnhof.csv  benutzer.csv  plz_list.xls  read_benutzer.py  reader_bahnhof.py  reader_plz.py
scripts/: create_user.sh  create_user.sql
sql/: V1__base_model.sql  V2__bahnhof_adresse.sql  V3.10__insert_benutzer.sql  V3.11__insert_reservierungsaufschlag.sql  V3.12__insert_ticket.sql  V3.1__insert_ort.sql  V3.2__insert_bahnhof.sql  V3.3__insert_bahnsteige.sql  V3.4__insert_klasse.sql  V3.5__insert_dauertyp.sql  V3.6__insert_zugtyp.sql  V3.7__insert_ticketpreise.sql  V3.8__insert_zug.sql  V3.9__insert_fahrplan.sql
src/data_modeller/: uebung2.dmd
src/data_modeller/uebung2/: dl_settings.xml  dmd_open.local
src/data_modeller/uebung2/businessinfo/: Business Information.xml
src/data_modeller/uebung2/datatypes/: DDLSelection.local  DataTypes.xml  Diagrams.local  Objects.local
src/data_modeller/uebung2/logical/: Diagrams.local  Logical.xml  Objects.local
src/data_modeller/uebung2/mapping/: DeletedMap_RM3816166E-D33F-B7D2-6CED-6DA2164C868A.xml  DeletedMap_RM7210342F-EEC2-BEA9-3EFF-B824D7B9CF88.xml  ExtendedMap_RM076C670B-16A3-3AD5-1B54-FD24FCF877C6.xml  (+6 more)
src/latex/aufgabe_2/: _configuration.tex  body.tex  main.tex
src/latex/protokoll/: body.tex  mmt.cls
src/python_sw/: README.md  pyproject.toml
src/python_sw/python_sw/: BahnhofService.py  DbService.py  FahplanService.py  FreePlaceService.py  TicketPreisService.py  TicketReservationService.py  UserService.py  ZugService.py  dto_models.py  server.py
(+217 files in other folders)
