[tool.poetry]
name = "python-sw"
version = "0.1.0"
description = ""
authors = ["Fabian Cordt <fcordt@gmail.com>"]
readme = "README.md"
packages = [{include = "python_sw"}]

[tool.poetry.dependencies]
python = "^3.10"
oracledb = "^1.3.1"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
